objects/CCMI__Sample_Data__c.object
<CustomObject>
    <fields>
        <fullName>CCMI__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This user will be assigned to the imported tasks.</inlineHelpText>
        <label>Projects Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Data_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Data_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Refresh_Date__c</fullName>
        <label>Last Refreshed On</label>
        <type>Date</type>
    </fields>
    <label>Sample Data</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Sample Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>